SERVER-30150 DropPendingCollectionReaper::rollBackDropPendingCollection() rolls back at most one drop-pending collection.

Since it is now possible for multiple drop-pending collections (in different databases) to be linked
to the same drop optime, this function requires the fully qualified original collection optime to be
able to locate the correct entry in the drop pending collection multimap.